chore: clean up old posts and new categories under resources
Signed-off-by: Harshal Chaudhari <harshal.chaudhary@gmail.com>

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="image/jpg" href="https://image.freepik.com/free-vector/big-data-center-server-room-rack-engineering-process-teamwork-computer-technology-cloud-storage_39422-1032.jpg"/>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>About - Deploy Data Science</title><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta itemprop="name" content="About">
@@ -8,31 +9,28 @@
 Created by Harshal, for ML and data science enthusiasts who would like to go beyond the prototype solutions and learn how to deploy data science from scratch into an end-to-end solutions.">
 
 <meta itemprop="wordCount" content="48">
-
-
-
-<meta itemprop="keywords" content="" />
-<meta property="og:title" content="About" />
+<meta itemprop="keywords" content="" /><meta property="og:title" content="About" />
 <meta property="og:description" content="Hi there, Welcome! to Deploy Data Science, a blog for all things data science and ML ops.
 Created by Harshal, for ML and data science enthusiasts who would like to go beyond the prototype solutions and learn how to deploy data science from scratch into an end-to-end solutions." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://deploydatascience.com/about/" />
+<meta property="og:url" content="https://www.deploydatascience.com/about/" /><meta property="article:section" content="" />
+
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="Hi there, Welcome! to Deploy Data Science, a blog for all things data science and ML ops.
 Created by Harshal, for ML and data science enthusiasts who would like to go beyond the prototype solutions and learn how to deploy data science from scratch into an end-to-end solutions."/>
 <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" media="screen" href="http://deploydatascience.com/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="http://deploydatascience.com/css/main.css" />
-		<link rel="stylesheet" type="text/css" href="http://deploydatascience.com/css/custom.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://www.deploydatascience.com/css/normalize.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://www.deploydatascience.com/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="https://www.deploydatascience.com/css/custom.css" />
 	
 
-        <link id="dark-scheme" rel="stylesheet" type="text/css" href="http://deploydatascience.com/css/dark.css" />
-                <link id="dark-scheme" rel="stylesheet" type="text/css" href="http://deploydatascience.com/css/custom-dark.css" />
+        <link id="dark-scheme" rel="stylesheet" type="text/css" href="https://www.deploydatascience.com/css/dark.css" />
+                <link id="dark-scheme" rel="stylesheet" type="text/css" href="https://www.deploydatascience.com/css/custom-dark.css" />
 
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-		<script src="http://deploydatascience.com/js/main.js"></script><script src="http://deploydatascience.com/js/custom.js"></script><script src="http://deploydatascience.com/js/custom1.js"></script>
+		<script src="https://www.deploydatascience.com/js/main.js"></script><script src="https://www.deploydatascience.com/js/custom.js"></script><script src="https://www.deploydatascience.com/js/custom1.js"></script>
 </head>
 
 <body>
@@ -40,12 +38,12 @@ Created by Harshal, for ML and data science enthusiasts who would like to go bey
 		<div class="header">
 	
 		<div class="avatar">
-			<a href="http://deploydatascience.com/">
+			<a href="https://www.deploydatascience.com/">
 				<img src="https://image.freepik.com/free-vector/big-data-center-server-room-rack-engineering-process-teamwork-computer-technology-cloud-storage_39422-1032.jpg" alt="Deploy Data Science" />
 			</a>
 		</div>
 	
-	<h1 class="site-title"><a href="http://deploydatascience.com/">Deploy Data Science</a></h1>
+	<h1 class="site-title"><a href="https://www.deploydatascience.com/">Deploy Data Science</a></h1>
 	<div class="site-description"><p>All things Data Science and ML Ops</p><nav class="nav social">
 			<ul class="flat"><li><a href="https://github.com/harshalchaudhari35" title="Github"><i data-feather="github"></i></a></li><li><a href="/index.xml" title="RSS"><i data-feather="rss"></i></a></li><li><a href="#" class="scheme-toggle" id="scheme-toggle"></a></li></ul>
 		</nav>
@@ -100,7 +98,7 @@ and learn how to deploy data science from scratch into an end-to-end solutions.<
 	</div>
 	<div class="footer wrapper">
 	<nav class="nav">
-		<div>2021  © Copyright notice |  <a href="https://github.com/knadh/hugo-ink">Ink</a> theme on <a href="https://gohugo.io">Hugo</a></div>
+		<div>2023  © Copyright notice |  <a href="https://github.com/knadh/hugo-ink">Ink</a> theme on <a href="https://gohugo.io">Hugo</a></div>
 	</nav>
 </div>
 
