--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="image/jpg" href="https://image.freepik.com/free-vector/big-data-center-server-room-rack-engineering-process-teamwork-computer-technology-cloud-storage_39422-1032.jpg"/>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Resources - Deploy Data Science</title><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta itemprop="name" content="Resources">
 <meta itemprop="description" content="Awesome List of Data Science Resources">
 
-<meta itemprop="wordCount" content="10">
-
-
-
-<meta itemprop="keywords" content="resources,list," />
-<meta property="og:title" content="Resources" />
+<meta itemprop="wordCount" content="66">
+<meta itemprop="keywords" content="resources,list," /><meta property="og:title" content="Resources" />
 <meta property="og:description" content="Awesome List of Data Science Resources" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://deploydatascience.com/resources/" />
+<meta property="og:url" content="https://www.deploydatascience.com/resources/" /><meta property="article:section" content="" />
+
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Resources"/>
 <meta name="twitter:description" content="Awesome List of Data Science Resources"/>
 <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" media="screen" href="http://deploydatascience.com/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="http://deploydatascience.com/css/main.css" />
-		<link rel="stylesheet" type="text/css" href="http://deploydatascience.com/css/custom.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://www.deploydatascience.com/css/normalize.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="https://www.deploydatascience.com/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="https://www.deploydatascience.com/css/custom.css" />
 	
 
-        <link id="dark-scheme" rel="stylesheet" type="text/css" href="http://deploydatascience.com/css/dark.css" />
-                <link id="dark-scheme" rel="stylesheet" type="text/css" href="http://deploydatascience.com/css/custom-dark.css" />
+        <link id="dark-scheme" rel="stylesheet" type="text/css" href="https://www.deploydatascience.com/css/dark.css" />
+                <link id="dark-scheme" rel="stylesheet" type="text/css" href="https://www.deploydatascience.com/css/custom-dark.css" />
 
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-		<script src="http://deploydatascience.com/js/main.js"></script><script src="http://deploydatascience.com/js/custom.js"></script><script src="http://deploydatascience.com/js/custom1.js"></script>
+		<script src="https://www.deploydatascience.com/js/main.js"></script><script src="https://www.deploydatascience.com/js/custom.js"></script><script src="https://www.deploydatascience.com/js/custom1.js"></script>
 </head>
 
 <body>
@@ -37,12 +35,12 @@
 		<div class="header">
 	
 		<div class="avatar">
-			<a href="http://deploydatascience.com/">
+			<a href="https://www.deploydatascience.com/">
 				<img src="https://image.freepik.com/free-vector/big-data-center-server-room-rack-engineering-process-teamwork-computer-technology-cloud-storage_39422-1032.jpg" alt="Deploy Data Science" />
 			</a>
 		</div>
 	
-	<h1 class="site-title"><a href="http://deploydatascience.com/">Deploy Data Science</a></h1>
+	<h1 class="site-title"><a href="https://www.deploydatascience.com/">Deploy Data Science</a></h1>
 	<div class="site-description"><p>All things Data Science and ML Ops</p><nav class="nav social">
 			<ul class="flat"><li><a href="https://github.com/harshalchaudhari35" title="Github"><i data-feather="github"></i></a></li><li><a href="/index.xml" title="RSS"><i data-feather="rss"></i></a></li><li><a href="#" class="scheme-toggle" id="scheme-toggle"></a></li></ul>
 		</nav>
@@ -87,8 +85,50 @@
 			<div class="markdown">
 				<h2 id="awesome-list-of-data-science-resources">Awesome List of Data Science Resources</h2>
 <ul>
-<li><strong>Data Engineering</strong></li>
-<li><strong>Machine Learning</strong></li>
+<li>
+<p><strong>Data Engineering</strong></p>
+<ul>
+<li>Playlist of Awesome Data Engineering Videos
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLx7SU80irPBZwM5KPa_zlJh4u5I0lJSZv" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></li>
+</ul>
+</li>
+<li>
+<p><strong>Machine Learning</strong></p>
+</li>
+<li>
+<p><strong>API</strong>
+Flask</p>
+<ul>
+<li><a href="https://github.com/exleym/Flask-Filter">https://github.com/exleym/Flask-Filter</a> Filtering library directly on top of flask
+Similar libs:
+<ul>
+<li><a href="https://github.com/juliotrigo/sqlalchemy-filters">https://github.com/juliotrigo/sqlalchemy-filters</a></li>
+<li><a href="https://github.com/gorilla-co/odata-query">https://github.com/gorilla-co/odata-query</a></li>
+</ul>
+</li>
+<li><a href="https://github.com/rochacbruno/dynaconf/">https://github.com/rochacbruno/dynaconf/</a> Configuration management for Flask in Production environments</li>
+</ul>
+</li>
+<li>
+<p><strong>DevOps</strong>
+Nginx</p>
+<ul>
+<li><a href="https://github.com/digitalocean/nginxconfig.io">https://github.com/digitalocean/nginxconfig.io</a> NGINX config generator on steroids.</li>
+</ul>
+</li>
+<li>
+<p><strong>Documentation</strong></p>
+<ul>
+<li>docusaurus <a href="https://docusaurus.io/">https://docusaurus.io/</a></li>
+</ul>
+</li>
+<li>
+<p><strong>APIs</strong></p>
+<ul>
+<li><a href="https://hasura.io/">Hasura</a> - Hasura gives you instant GraphQL &amp; REST APIs on new &amp; existing data sources.</li>
+</ul>
+</li>
 </ul>
 
 			</div>
@@ -99,7 +139,7 @@
 	</div>
 	<div class="footer wrapper">
 	<nav class="nav">
-		<div>2021  © Copyright notice |  <a href="https://github.com/knadh/hugo-ink">Ink</a> theme on <a href="https://gohugo.io">Hugo</a></div>
+		<div>2023  © Copyright notice |  <a href="https://github.com/knadh/hugo-ink">Ink</a> theme on <a href="https://gohugo.io">Hugo</a></div>
 	</nav>
 </div>
 
