resources: add honeybadger security policy reference
Signed-off-by: Harshal Chaudhari <harshal.chaudhary@gmail.com>

--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -7,7 +7,7 @@
 	<meta itemprop="name" content="Resources">
 <meta itemprop="description" content="Awesome List of Data Science Resources">
 
-<meta itemprop="wordCount" content="66">
+<meta itemprop="wordCount" content="79">
 <meta itemprop="keywords" content="resources,list," /><meta property="og:title" content="Resources" />
 <meta property="og:description" content="Awesome List of Data Science Resources" />
 <meta property="og:type" content="article" />
@@ -127,6 +127,12 @@ Nginx</p>
 <p><strong>APIs</strong></p>
 <ul>
 <li><a href="https://hasura.io/">Hasura</a> - Hasura gives you instant GraphQL &amp; REST APIs on new &amp; existing data sources.</li>
+</ul>
+</li>
+<li>
+<p><strong>Security</strong></p>
+<ul>
+<li><a href="https://www.honeybadger.io/security/">honeybadger security</a>: One of the best and clean company security policy document</li>
 </ul>
 </li>
 </ul>
