resources: personal favourite reading material
Signed-off-by: Harshal Chaudhari <harshal.chaudhary@gmail.com>

--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -7,7 +7,7 @@
 	<meta itemprop="name" content="Resources">
 <meta itemprop="description" content="Awesome List of Data Science Resources">
 
-<meta itemprop="wordCount" content="79">
+<meta itemprop="wordCount" content="90">
 <meta itemprop="keywords" content="resources,list," /><meta property="og:title" content="Resources" />
 <meta property="og:description" content="Awesome List of Data Science Resources" />
 <meta property="og:type" content="article" />
@@ -135,6 +135,10 @@ Nginx</p>
 <li><a href="https://www.honeybadger.io/security/">honeybadger security</a>: One of the best and clean company security policy document</li>
 </ul>
 </li>
+</ul>
+<h2 id="personal-favourite-reading-material">Personal Favourite Reading Material</h2>
+<ul>
+<li><a href="https://carlosschults.net/en/fivel-levels-readable-code/">The 5 Levels of Readable Code</a> (coding)</li>
 </ul>
 
 			</div>
